# RsPainter

./: CMakeLists.txt  Camera.h  Model.h  README.md  Shader.h  Texture.h  fragment.txt  glad.c  main.cpp  main.h  mesh.h  vertex.txt  vertices.h
Shaders/: fragment.fs  light.fs  vertex.vs
